force-app/main/default/objects/Project_Details__c/Project_Details__c.object-meta.xml
<CustomObject>
    <label>Project Details</label>
    <nameField>
        <displayFormat>PRJ-{0000}</displayFormat>
        <label>Project Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>