force-app/main/default/objects/Project_Details__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Project Details</relationshipLabel>
    <relationshipName>Project_Details</relationshipName>
    <type>Lookup</type>
</CustomField>