force-app/main/default/objects/Project_Details__c/fields/ProClient__c.field-meta.xml
<CustomField>
    <fullName>ProClient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ProClient</label>
    <referenceTo>Client__c</referenceTo>
    <relationshipLabel>Project Details</relationshipLabel>
    <relationshipName>Project_Details</relationshipName>
    <type>Lookup</type>
</CustomField>