force-app/main/default/objects/Project_Details__c/fields/Project_Manager_email__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager_email__c</fullName>
    <label>Project Manager email</label>
    <type>Email</type>
</CustomField>